fix overflow issues with pre blocks

--- a/app/assets/stylesheets/site.css.scss
+++ b/app/assets/stylesheets/site.css.scss
@@ -81,6 +81,8 @@ pre{
   padding: 8px 8px;
   border: 1px solid #ddd;
   white-space: pre;
+  word-wrap: normal;
+  overflow: auto;
 }
 code{
   font-size: .9em;
